# fluvio-smartmodule-examples

./: .gitignore  Cargo.toml  README.md  bors.toml
.github/workflows/: ci.yml
avro-to-str/: Cargo.toml
avro-to-str/src/: lib.rs
crates/fluvio-model-github/: Cargo.toml
crates/fluvio-model-github/src/: lib.rs
crates/github-stars-smartmodule/: Cargo.toml  README.md
crates/github-stars-smartmodule/src/: lib.rs
github-stars/: Cargo.toml  connect.yml
grocery-notifications/: Cargo.toml
grocery-notifications-simple/: Cargo.toml
grocery-notifications-simple/src/: lib.rs
grocery-notifications/src/: lib.rs
incremental-average/: Cargo.toml
incremental-average/src/: lib.rs
json-array-expansion/: Cargo.toml
json-array-expansion/src/: lib.rs
json-to-avro/: Cargo.toml
json-to-avro/src/: lib.rs
json-to-yaml/: Cargo.toml
json-to-yaml/src/: lib.rs
log-level/: Cargo.toml
log-level/src/: lib.rs
reddit-pagination/: Cargo.toml
reddit-pagination/src/: lib.rs
regex-scrubbing/: Cargo.toml
regex-scrubbing/src/: lib.rs
smartmodule-json/: Cargo.toml  hk_mean_visibility.yml
smartmodule-json/src/: lib.rs
smartmodule-with-params/: Cargo.toml
smartmodule-with-params/src/: lib.rs
smartmodule-xml/: Cargo.toml  bikepoints.yml
smartmodule-xml/src/: lib.rs
summing-integers/: Cargo.toml
summing-integers/src/: lib.rs
