[workspace]
members = [
    "github-stars",
    "json-to-yaml",
    "reddit-pagination",
    "log-level",
    "regex-scrubbing",
    "grocery-notifications",
    "summing-integers",
    "incremental-average",
    "json-array-expansion",
    "smartmodule-with-params",
]

[profile.release]
lto = true
