[workspace]
members = [
    "github-stars",
    "json-to-yaml",
    "reddit-pagination",
    "log-level",
    "regex-scrubbing",
    "grocery-notifications",
    "summing-integers",
    "incremental-average",
    "json-array-expansion",
    "smartmodule-with-params",
    "smartmodule-xml",
]

[profile.release]
lto = true
