[workspace]
members = [
    "github-stars",
    "json-to-yaml",
    "reddit-pagination",
    "log-level",
    "regex-scrubbing",
    "grocery-notifications",
    "summing-integers",
    "incremental-average",
    "json-array-expansion",
    "smartmodule-json",
    "smartmodule-with-params",
    "smartmodule-xml",
    "json-to-avro",
    "avro-to-str",
]

[profile.release]
lto = true
