[package]
name = "github-stars-smartmodule"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = { path = "../../../../infinyon/fluvio/crates/fluvio-smartmodule" }
fluvio-model-github = { path = "../fluvio-model-github" }
serde_json = "1"

# We can make this crate have its own workspace.
# This is needed to enable `profile.relesae.lto` below.
# If your crate will belong to another workspace,
# consider enabling lto in that workspace instead
[workspace]
members = ["."]

[profile.release]
lto = true
